# strawberry

./: Spacefile  dev.py  pyproject.toml  requirements.txt
.github/workflows/: deta.yml
app/: main.py  requirements.txt
